# phishing_catcher

./: .gitignore  Dockerfile  README.md  external.yaml  pyproject.toml  suspicious.yaml
.github/workflows/: docker-image.yml
deploy/: config.yaml  deploy.yaml
phishing_catcher/: catch_phishing.py
